aws/socks/helm-chart/socks-front-end-lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: socks-front-end-lb
  namespace: socks
spec:
  type: LoadBalancer
  selector:
    app: basic-ingress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3079
