aws/socks/helm-chart/socks-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace : socks
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: 192.168.201.245
      http:
        paths:
        - path: /socks
          backend:
            serviceName: front-end
            servicePort: 80
